err/emergic.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Emergic'...
Compiling './lib/python3.5/site-packages/Emergic/Original (FlatFile) Emergic.py'...
***   File "./lib/python3.5/site-packages/Emergic/Original (FlatFile) Emergic.py", line 329
    if   headers==1: print "Time ",
                                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/Emergic/link.py'...
***   File "./lib/python3.5/site-packages/Emergic/link.py", line 166
    if links==3:    print "%-27.27s"  % (self.srcPort.unit.dbgName + self.dbgName + " - - -"),
                                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/Emergic/network.py'...
***   File "./lib/python3.5/site-packages/Emergic/network.py", line 177
    if   headers==1: print "Time ",
                                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/Emergic/port.py'...
***   File "./lib/python3.5/site-packages/Emergic/port.py", line 194
    print   "Sending value %-9.9s from unit %-8.8s port %-8.8s over link %-8.8s to   unit %s" % \
                                                                                            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/Emergic/unit.py'...
***   File "./lib/python3.5/site-packages/Emergic/unit.py", line 153
    print "%-55.55s" % ("Unit " + self.dbgName + " - - - - - -"),
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/Emergic/value.py'...
***   File "./lib/python3.5/site-packages/Emergic/value.py", line 70
    print "low > high"
                     ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/Emergic-0.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
